# banlex

./: .gitignore  Cargo.toml  DISCLAIMER.md  README.md
.github/workflows/: ci.yml
examples/: lexicon.json
examples/texts/: clean.txt  scam_multi.txt  spam_en.txt
src/: lexicon.rs  lib.rs  main.rs  scorer.rs  tokenize.rs
tests/: cli.rs
